# pAKAman

./: CHANGELOG_v2.md  CMakeLists.txt  README.md  app_main.cpp  sdkconfig
assets/: 1_convert_baba.bat
core/: audio.cpp  audio.h  input.cpp  input.h  persist.cpp  persist.h
game/: config.h  game.cpp  game.h  pacman.cpp
lib/: hardware_adc.cpp  hardware_adc.h  hardware_pwm.cpp  hardware_pwm.h
main/: CMakeLists.txt  app_main.cpp
main/assets/: assets.cpp
main/core/: audio.cpp  audio.h  graphics.cpp  graphics.h  i18n.cpp  i18n.h  input.cpp  input.h  sdcard.cpp  sdcard.h  settings.cpp  settings.h
main/game/: config.h  fruits.cpp  fruits.h  game.cpp  game.h  ghost.cpp  pacman.cpp
main/ui/: highscores.cpp  highscores.h  menu.cpp  menu.h  title_screen.cpp  title_screen.h
tasks/: task_game.cpp  task_input.cpp
ui/: highscores.cpp  highscores.h  options.cpp  options.h
